fixed a mobile layout issues

--- a/src/stream.scss
+++ b/src/stream.scss
@@ -15,6 +15,8 @@
 @media only screen and (max-width: 900px) {
     .controls{
         flex-direction: column;
+        gap: 5px;
+        margin: 5px 0;
     }
 }
 
@@ -241,3 +243,8 @@
     display: flex;
     gap: 5px;
 }
+
+.controls-container{
+    display: flex;
+    align-items: center;
+  }
